; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_ensure_adm3.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_ensure_adm3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_ERR_BAD_UUID = common dso_local global i32 0, align 4
@SVN_ERR_BAD_URL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_ensure_adm3(i8* %0, i8* %1, i8* %2, i8* %3, i32 %4, i32 %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32*, align 8
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32* %6, i32** %15, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %7
  %21 = load i32, i32* @SVN_ERR_BAD_UUID, align 4
  %22 = call i32* @svn_error_create(i32 %21, i32* null, i32* null)
  store i32* %22, i32** %8, align 8
  br label %51

23:                                               ; preds = %7
  %24 = load i8*, i8** %12, align 8
  %25 = icmp eq i8* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load i32, i32* @SVN_ERR_BAD_URL, align 4
  %28 = call i32* @svn_error_create(i32 %27, i32* null, i32* null)
  store i32* %28, i32** %8, align 8
  br label %51

29:                                               ; preds = %23
  %30 = load i8*, i8** %9, align 8
  %31 = load i32*, i32** %15, align 8
  %32 = call i32 @svn_dirent_get_absolute(i8** %16, i8* %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load i32*, i32** %15, align 8
  %35 = load i32*, i32** %15, align 8
  %36 = call i32 @svn_wc_context_create(i32** %17, i32* null, i32* %34, i32* %35)
  %37 = call i32 @SVN_ERR(i32 %36)
  %38 = load i32*, i32** %17, align 8
  %39 = load i8*, i8** %16, align 8
  %40 = load i8*, i8** %11, align 8
  %41 = load i8*, i8** %12, align 8
  %42 = load i8*, i8** %10, align 8
  %43 = load i32, i32* %13, align 4
  %44 = load i32, i32* %14, align 4
  %45 = load i32*, i32** %15, align 8
  %46 = call i32 @svn_wc_ensure_adm4(i32* %38, i8* %39, i8* %40, i8* %41, i8* %42, i32 %43, i32 %44, i32* %45)
  %47 = call i32 @SVN_ERR(i32 %46)
  %48 = load i32*, i32** %17, align 8
  %49 = call i32 @svn_wc_context_destroy(i32* %48)
  %50 = call i32* @svn_error_trace(i32 %49)
  store i32* %50, i32** %8, align 8
  br label %51

51:                                               ; preds = %29, %26, %20
  %52 = load i32*, i32** %8, align 8
  ret i32* %52
}

declare dso_local i32* @svn_error_create(i32, i32*, i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_dirent_get_absolute(i8**, i8*, i32*) #1

declare dso_local i32 @svn_wc_context_create(i32**, i32*, i32*, i32*) #1

declare dso_local i32 @svn_wc_ensure_adm4(i32*, i8*, i8*, i8*, i8*, i32, i32, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_wc_context_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
